; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_multi-uv.c_check_multi_info.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_multi-uv.c_check_multi_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32* }

@curl_handle = common dso_local global i32 0, align 4
@CURLINFO_EFFECTIVE_URL = common dso_local global i32 0, align 4
@CURLINFO_PRIVATE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"%s DONE\0A\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [17 x i8] c"CURLMSG default\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @check_multi_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_multi_info() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  br label %6

6:                                                ; preds = %40, %0
  %7 = load i32, i32* @curl_handle, align 4
  %8 = call %struct.TYPE_3__* @curl_multi_info_read(i32 %7, i32* %3)
  store %struct.TYPE_3__* %8, %struct.TYPE_3__** %2, align 8
  %9 = icmp ne %struct.TYPE_3__* %8, null
  br i1 %9, label %10, label %41

10:                                               ; preds = %6
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  switch i32 %13, label %37 [
    i32 128, label %14
  ]

14:                                               ; preds = %10
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 1
  %17 = load i32*, i32** %16, align 8
  store i32* %17, i32** %4, align 8
  %18 = load i32*, i32** %4, align 8
  %19 = load i32, i32* @CURLINFO_EFFECTIVE_URL, align 4
  %20 = call i32 @curl_easy_getinfo(i32* %18, i32 %19, i8** %1)
  %21 = load i32*, i32** %4, align 8
  %22 = load i32, i32* @CURLINFO_PRIVATE, align 4
  %23 = call i32 @curl_easy_getinfo(i32* %21, i32 %22, i8** %5)
  %24 = load i8*, i8** %1, align 8
  %25 = call i32 @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* %24)
  %26 = load i32, i32* @curl_handle, align 4
  %27 = load i32*, i32** %4, align 8
  %28 = call i32 @curl_multi_remove_handle(i32 %26, i32* %27)
  %29 = load i32*, i32** %4, align 8
  %30 = call i32 @curl_easy_cleanup(i32* %29)
  %31 = load i8*, i8** %5, align 8
  %32 = icmp ne i8* %31, null
  br i1 %32, label %33, label %36

33:                                               ; preds = %14
  %34 = load i8*, i8** %5, align 8
  %35 = call i32 @fclose(i8* %34)
  br label %36

36:                                               ; preds = %33, %14
  br label %40

37:                                               ; preds = %10
  %38 = load i32, i32* @stderr, align 4
  %39 = call i32 @fprintf(i32 %38, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  br label %40

40:                                               ; preds = %37, %36
  br label %6

41:                                               ; preds = %6
  ret void
}

declare dso_local %struct.TYPE_3__* @curl_multi_info_read(i32, i32*) #1

declare dso_local i32 @curl_easy_getinfo(i32*, i32, i8**) #1

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i32 @curl_multi_remove_handle(i32, i32*) #1

declare dso_local i32 @curl_easy_cleanup(i32*) #1

declare dso_local i32 @fclose(i8*) #1

declare dso_local i32 @fprintf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
